Fixed underline textfield alignment for RTL.

--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -1,2 +1,16 @@
 @import '../../common';
 @import "~office-ui-fabric/src/components/TextField/TextField";
+
+.ms-TextField.ms-TextField--underlined {
+
+  .ms-Label {
+    @include margin-right(8px);
+    @include padding-left(12px);
+    @include padding-right(0);
+  }
+
+  .ms-TextField-field {
+    @include float(left);
+    @include text-align(left);
+  }
+}
